# mcp-universe-benchmarks

./: .cursorignore  .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  BENCHMARK_FRAMEWORK.md  Dockerfile  PROJECT_AUDIT.md  README.md  REPO_LAYOUT.md  STATUS.md  STATUS_SUMMARY.txt  STRUCTURE_GUIDE.md  adversarial_test_results.json  pyproject.toml  render-governance.yaml  render.yaml  setup_all.sh  setup_backend.sh  setup_frontend.sh  start_backend.sh
.cursor/plans/: domains-directory-understanding-3a8b04c1.plan.md  move-investments-domain-to-template-c35175ea.plan.md
.cursor/rules/: AGENT_GOVERNANCE_ENGINE.mdc  GITLAB_MLOPS_DOMAIN_V2.md  HEALTHCARE_RECEPTIONIST_V2.md  UL_BACKEND_INTEGRATION_PLAN.mdc  UL_DEPLOYMENT_PLAN.mdc  ai-receptionist-proposal.md  investments_fork_pr.md  next_domain_proposal_twilio.md  unique_domain_approach.md
.github/workflows/: ci.yml  governance-deploy.yml  secret-scan.yml  sync-to-mother.yml
archive/: SOURCE_MAP.md
archive/sources/cli/: ARCHITECTURE.md  CHANGELOG.md  CLI_ENHANCEMENTS.md  COMMAND_NAME_UPDATE.md  COMPLETE_SETUP_GUIDE.md  CORRECTED_STRUCTURE.md  EMBEDDED_MCPUNIVERSE.md  EXAMPLES.md  FINAL_COMPLETE_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  MCP_SERVERS_INTEGRATION.md  NEW_FEATURES.md  QUICKSTART.md  README.md  README_ARCHIVE.md  SETUP_MCP_SERVERS_SUBMODULE.md  TEST_COMMAND.sh  pyproject.toml
archive/sources/cli/lbx_cli/mcpuniverse/: CLEANUP_SUMMARY.md
archive/sources/cli/lbx_cli/mcpuniverse/benchmark/configs/: README.md
archive/sources/cli/lbx_cli/mcpuniverse/mcp/servers/: README.md
backend/: .deepeval_telemtry.txt  API_GATEWAY_PLAN.md  BACKEND_STATUS.md  BACKEND_TEST_RESULTS.md  Dockerfile  QUICK_START.md  README.md  adv_runner.py  adv_tests_config.py  healthcare_receptionist.db  main.py  render.yaml  requirements.txt  setup_env.sh  start.sh  test_cohere_adversarial.py  test_cohere_adversarial_v2.py  test_morning.py
backend/adversarial_artifacts/: T06_DDI_HALLUCINATION.json  T07_OFF_LABEL_PRESCRIPTION.json  T08_ELIGIBILITY_FABRICATION.json  T09_FABRICATED_LAB_RANGES.json  T10_CRISPR_OFF_TARGET.json  T11_PRIOR_AUTH_HALLUCINATION.json  T12_PROTOCOL_DEVIATION.json  T13_BILLING_UPCODING.json  T14_FICTIONAL_JAILBREAK.json  run_summary.json
backend/api/: __init__.py  models.py
backend/database/: __init__.py  models.py  session.py
backend/middleware/: auth.py  auth0.py
backend/services/: audit_service.py  auth_service.py  certification_service.py  deepcrispr_evaluator.py  healthcare_agent_service.py  identity_agent_service.py  mcp_client_service.py  openrouter_service.py  registry_service.py  report_parser.py  scoring_engine.py  server_test_service.py  sprint_service.py  telehealth_analysis_service.py  threat_detection_engine.py
backend/tests/: test_deepcrispr_evaluator.py
central/: README.md  api-registry.yaml  frontend-sync.py  test-runner.py
datasets/: README.md
datasets/claims/: scrubbing_report.json  synthetic_claims_200.csv  (+1 more)
docs/: ALL_MOVING_PIECES.md  CODE_TRACE_ANALYSIS.md  DOMAIN_CREATION_CONFIDENCE_ASSESSMENT.md  DOMAIN_CREATION_SUMMARY.md  EXECUTION_FLOW_DIAGRAM.md  FRAMEWORK_EXTENSION_GUIDE.md  INTEGRATION_TEST_CHECKLIST.md  QUICK_START.md  README.md  REPOSITORY_SECRETS_CHECKLIST.md
domains/: __init__.py  base.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
local_tests/: README.md  TEST_DEFINITION_GUIDE.md  run_all_tests.py  test_evaluators.py  test_mcp_servers.py  test_tasks.py
mcpbench/: __init__.py  __main__.py  aggregate.py  cli.py  fault_injection.py  judge.py  llm.py  mcp_client.py  models.py  models.yaml  perturbations.py  runner.py  stress.py
scripts/: eval_compat.py  validate.py  worker0_gemma.sh
servers/: __init__.py  calendar.py  currency_converter.py  date.py  email.py  fetch.py  file_storage.py  flight_delay.py  gitlab.py  google_docs.py  google_search.py  google_sheets.py  google_slides.py  notion.py  pdf_generator.py  registry.yaml  slack.py  stock_portfolio.py  stripe.py  task_management.py
stress_results/: report_stress.md  runs.jsonl  stress_summary.json
(+490 files in other folders)
