[project]
name = "lbx-mcp-universe-template"
version = "0.1.0"
description = "Template repository for LBX MCP Universe domain benchmarks"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "LBX MCP Team" }
]
dependencies = [
    # Alignerr CLI (installed from git submodule)
    "alignerr-cli",
    # Code tools for MCP universe
    "lb-code-tools",
    # Template dependencies
    "pydantic>=2.10.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
]

# UV configuration for local development
[tool.uv]

# Tell UV to install CLI from submodule path
[tool.uv.sources]
alignerr-cli = { path = "lbx_mcp_universe_cli", editable = true }
lb-code-tools = { path = "./lbx_mcp_universe_cli/lbx_cli/libs/lb_code_tools-0.1.0-py3-none-any.whl" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["domains"]

[tool.black]
line-length = 100
target-version = ['py312']
