[project]
name = "mcp-universe-benchmarks"
version = "0.1.0"
description = "MCP Universe agent benchmarks — domains, validator, mock MCP servers, benchmark runner"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "MCP Universe Team" }
]
dependencies = [
    "pydantic>=2.10.0",
    "pyyaml>=6.0.0",
    "mcp>=1.0.0",
    "litellm>=1.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
]

[project.scripts]
mcpbench = "mcpbench.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["domains", "scripts", "mcpbench", "servers"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["local_tests"]
