[project]
name = "alignerr-cli"
version = "0.1.0"
description = "CLI tools for LBX MCP Universe benchmark framework - Run domain validations locally"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "LBX MCP Team" }
]
dependencies = [
    # CLI dependencies
    "click>=8.1.0",
    "typer>=0.17.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",
    # Core dependencies from mcpuniverse
    "requests>=2.32.0",
    "pydantic>=2.10.6",
    "pydantic[email]>=2.10.6",
    "schema==0.7.7",
    "mcp>=1.9.4",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "anyio>=4.9.0",
    "pyyaml>=6.0.0",
    "gitpython>=3.1.0",
    # LLM providers
    "openai>=1.99.0",
    "anthropic>=0.49.0",
    "mistralai>=1.6.0",
    "google-genai>=1.16.0",
    "xai-sdk>=1.0.0",
    "claude-code-sdk>=0.0.20",
    "litellm[proxy]>=1.75.0",
    # MCP servers and utilities
    "mcp_server_fetch",
    "mcp_server_calculator>=0.1.0",
    "wikipedia-api>=0.8.0",
    "yfinance>=0.2.0",
    "playwright>=1.52.0",
    # Google services
    "google-auth>=2.38.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client",
    # Additional utilities
    "pytz>=2024.2",
    "reportlab>=4.0.0",
    "PyPDF2>=3.0.0",
    "stripe>=10.0.0",
    "twilio>=9.0.0",
]

[project.scripts]
alignerr_mcp = "lbx_cli.main:app"
alignerr = "lbx_cli.main:app"  # Alias for backward compatibility

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
]
blender = [
    "blender-mcp>=1.1.0",
    "mathutils>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lbx_cli"]

[tool.hatch.build.targets.wheel.shared-data]
"lbx_cli/mcpuniverse/agent/configs" = "lbx_cli/mcpuniverse/agent/configs"
"lbx_cli/mcpuniverse/mcp/configs" = "lbx_cli/mcpuniverse/mcp/configs"
"lbx_cli/mcpuniverse/benchmark/configs" = "lbx_cli/mcpuniverse/benchmark/configs"

[tool.black]
line-length = 100
target-version = ['py311']
